Fixing new bug in SScalar (List.of cannot be used if elements MAY be null)